
classDiagram
    %% Core Models
    class User {
        +string UserID
        +string Name
        +string Email
        +string Password
        +string RoleID
    }
    
    class Role {
        +string RoleID
        +string RoleName
    }
    
    %% Core Interfaces
    class IUserRepository {
        <<interface>>
        +Task~User~ GetUserByEmailAsync(string email)
        +Task~bool~ CreateUserAsync(User user)
        +Task~bool~ EmailExistsAsync(string email)
    }
    
    class IRoleRepository {
        <<interface>>
        +Task~List~Role~~ GetAllRolesAsync()
        +Task~Role~ GetRoleByIdAsync(string roleId)
    }
    
    class IUserValidator {
        <<interface>>
        +Task~ValidationResult~ ValidateForRegistrationAsync(User user)
        +ValidationResult ValidateForLogin(string email, string password)
    }
    
    class IUserManager {
        <<interface>>
        +Task~Result~ RegisterUserAsync(User user)
        +Task~AuthResult~ AuthenticateUserAsync(string email, string password)
    }
    
    class IRoleManager {
        <<interface>>
        +Task~Role~ GetRoleByIdAsync(string roleId)
    }
    
    %% Implementation Classes
    class UserRepository {
        +Task~User~ GetUserByEmailAsync(string email)
        +Task~bool~ CreateUserAsync(User user)
        +Task~bool~ EmailExistsAsync(string email)
    }
    
    class RoleRepository {
        +Task~List~Role~~ GetAllRolesAsync()
        +Task~Role~ GetRoleByIdAsync(string roleId)
    }
    
    class UserValidator {
        -IUserRepository _userRepository
        +Task~ValidationResult~ ValidateForRegistrationAsync(User user)
        +ValidationResult ValidateForLogin(string email, string password)
    }
    
    class UserManager {
        -IUserRepository _userRepository
        -IUserValidator _validator
        +Task~Result~ RegisterUserAsync(User user)
        +Task~AuthResult~ AuthenticateUserAsync(string email, string password)
    }
    
    class RoleManager {
        -IRoleRepository _roleRepository
        +Task~Role~ GetRoleByIdAsync(string roleId)
    }
    
    %% Page Models
    class loginModel {
        -IUserManager _userManager
        -IRoleManager _roleManager
        +Task~IActionResult~ OnPostAsync()
    }
    
    class LogoutModel {
        +Task~IActionResult~ OnGetAsync()
    }
    
    %% Authentication Components
    class Program {
        +CookieAuthenticationOptions ConfigureAuth()
    }
    
    %% Relationships
    User "1" --> "1" Role : has role
    IUserRepository <|.. UserRepository : implements
    IRoleRepository <|.. RoleRepository : implements
    IUserValidator <|.. UserValidator : implements
    IUserManager <|.. UserManager : implements
    IRoleManager <|.. RoleManager : implements
    
    UserValidator --> IUserRepository : uses
    UserManager --> IUserRepository : uses
    UserManager --> IUserValidator : uses
    RoleManager --> IRoleRepository : uses
    
    loginModel --> IUserManager : uses
    loginModel --> IRoleManager : uses
